--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="app_id">634074449982325</string>
-    <!-- 
-    <string name="app_id">634074449982325</string>
- 	-->
+    <string name="get_started">To get started, log using Facebook</string>
+    <string name="settings">Settings</string>
+    
 </resources>
