--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,4 +17,7 @@
 	<string name="single_user_selected">%1$s</string>
 	<string name="two_users_selected">%1$s and %2$s</string>
 	<string name="multiple_users_selected">%1$s and %2$s others</string>
+	
+	<string name="query">Query</string>
+	<string name="multiQuery">Multi-query</string>
 </resources>
